Halfje-Bruin Gumbo theme changes: - fixed wrapping of site title and description - fixed PHP notices in post navigation (should be fixed in Gumbo itself!) - improved handling of featured images

--- a/app/themes/hb-gumbo/style.css
+++ b/app/themes/hb-gumbo/style.css
@@ -37,6 +37,11 @@ Text Domain: halfje-bruin
         content: '\f413';
 }
 
+.site-header .site-title,
+.site-header .site-description {
+	white-space: nowrap;
+}
+
 .blog .format-gallery .entry-featured + .entry-title,
 .archive .format-gallery .entry-featured + .entry-title {
         margin: 0;
